--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -27,3 +27,8 @@ spec:
     kind: Deployment
     jsonPointers:
     - /metadata/annotations/
+  - group: ""
+    kind: Secret
+    jsonPointers:
+     - /data
+     - /stringData
